IMLEC-3 Add about page

--- a/app/src/app/core/components/sidebar/sidebar.component.html
+++ b/app/src/app/core/components/sidebar/sidebar.component.html
@@ -34,4 +34,8 @@
     <mat-icon>fastfood</mat-icon>
     <span class="nav-caption">Catering and Food</span>
   </a>
+  <a mat-list-item routerLink="/about" (click)="onSidenavClose()" skipLocationChange>
+    <mat-icon>info</mat-icon>
+    <span class="nav-caption">About</span>
+  </a>
 </mat-nav-list>
