--- a/app/src/app/components/components/contentBox/contentBox.component.scss
+++ b/app/src/app/components/components/contentBox/contentBox.component.scss
@@ -7,6 +7,7 @@ app-contentbox {
   border: 1px solid black;
   border-radius: 3px;
   box-shadow: 3px 3px 6px 0 rgba(0, 0, 0, 0.36);
+  padding: 5px;
 }
 
 .contentBox > div, .contentBox > a {
