--- a/app/src/app/core/containers/main/main.component.scss
+++ b/app/src/app/core/containers/main/main.component.scss
@@ -1,3 +1,9 @@
+$primary: var(--primary-colour);
+
+.mat-primary {
+  background-color: $primary !important;
+}
+
 mat-sidenav-container, mat-sidenav-content, mat-sidenav {
   height: 100%;
 }
