--- a/app/src/app/core/components/header/header.component.html
+++ b/app/src/app/core/components/header/header.component.html
@@ -7,13 +7,13 @@
   <div>
     <a routerLink="/welcome" skipLocationChange>IMLEC 2021</a>
   </div>
-  <div class="desktop" *ngIf="features.scoreboard">
+  <div *ngIf="config?.features?.scoreboard" class="desktop">
     <a routerLink="/scores" skipLocationChange>Live Scoreboard</a>
   </div>
-  <div class="desktop" *ngIf="features.listings">
+  <div *ngIf="config?.features?.listings" class="desktop">
     <a routerLink="/listings" skipLocationChange>Entries</a>
   </div>
-  <div class="desktop" *ngIf="features.rules">
+  <div *ngIf="config?.features?.rules" class="desktop">
     <a routerLink="/rules" skipLocationChange>Competition Rules</a>
   </div>
 </mat-toolbar>
