--- a/app/src/app/listings/containers/listings/listings.component.html
+++ b/app/src/app/listings/containers/listings/listings.component.html
@@ -1,6 +1,6 @@
 <app-spinner [show]="!hasEntries"></app-spinner>
 <div class="entry-list" *ngIf="hasEntries">
-  <app-entry [entries]="entries" *ngIf="features.fullListings"></app-entry>
-  <app-count [count]="entries.length" *ngIf="!features.fullListings"></app-count>
+  <app-entry *ngIf="config?.features?.fullListings" [entries]="entries"></app-entry>
+  <app-count *ngIf="!config?.features?.fullListings" [count]="entries.length"></app-count>
 </div>
 
