IMLEC-26 Add coverage to 70%

--- a/app/src/app/scoreboard/components/score/score.component.html
+++ b/app/src/app/scoreboard/components/score/score.component.html
@@ -118,6 +118,10 @@
           <td>Specific consumption</td>
           <td>{{score(element).specificCoalConsumptionToDisplay}}</td>
         </tr>
+        <tr>
+          <td>Average Drawbar Pull</td>
+          <td>{{score(element).averageDrawBarPull}}</td>
+        </tr>
       </table>
     </ng-template>
   </ng-container>
