--- a/app/src/app/welcome/containers/welcome/welcome.component.html
+++ b/app/src/app/welcome/containers/welcome/welcome.component.html
@@ -15,7 +15,7 @@
   </p>
   <p *ngIf="config?.features?.applicationForm">
     Send completed application forms to Tom Parham at <a
-    href="mailto:tom_parham@hotmail.co.uk">tom_parham@hotmail.co.uk</a>
+    href="mailto:tom_parham@hotmail.co.uk">tom_parham&#64;hotmail.co.uk</a>
   </p>
 </div>
 <div class="center">
