IMLEC-46 Switch to flow control

--- a/app/src/app/about/containers/about/about.component.html
+++ b/app/src/app/about/containers/about/about.component.html
@@ -7,7 +7,7 @@
       <div>
         Written by Luke Bridges
         <ul>
-          <li>Available to be re-used at any IMLEC</li>
+          <li>Available to be re-used at any IMLEC or any Model Locomotive Efficiency Competition</li>
           <li>Originally built for Maidstone IMLEC 2021</li>
           <li>Built in Angular 20+ using Typescript and NodeJS/Express backend</li>
         </ul>
