--- a/app/src/app/listings/components/entry/entry.component.html
+++ b/app/src/app/listings/components/entry/entry.component.html
@@ -1,64 +1,12 @@
 <div class="day">
   <h1>Friday</h1>
   <div class="entries">
-    <app-contentbox class="entry" *ngFor="let entry of fridayEntries">
-      <div>
-        <span class="runNo">{{ entry.runNo }}.</span>&nbsp;<span
-        class="driver">{{ entry.driver.name }}</span>&nbsp;<span
-        class="time">{{ parseTime(entry.time) }}</span><br/>
-        <span>{{ entry.driver.club }}</span><br/>
-        <span>{{ entry.gauge }}" {{ entry.model }}</span><br/>
-      </div>
-      @if (entry.img !== null) {
-        <img class="entryPhoto" alt="Photo of {{entry.model}}"
-             src="{{url}}/assets/photos/{{entry.img}}">
-      }
-    </app-contentbox>
-  </div>
-</div>
-<div class="day">
-  <h1>Saturday</h1>
-  <div class="entries">
-    <app-contentbox class="entry" *ngFor="let entry of saturdayEntries">
-      <div>
-        <span class="runNo">{{ entry.runNo }}.</span>&nbsp;<span
-        class="driver">{{ entry.driver.name }}</span>&nbsp;<span
-        class="time">{{ parseTime(entry.time) }}</span><br/>
-        <span>{{ entry.driver.club }}</span><br/>
-        <span>{{ entry.gauge }}" {{ entry.model }}</span><br/>
-      </div>
-      @if (entry.img !== null) {
-        <img class="entryPhoto" alt="Photo of {{entry.model}}"
-             src="{{url}}/assets/photos/{{entry.img}}">
-      }
-    </app-contentbox>
-  </div>
-</div>
-<div class="day">
-  <h1>Sunday</h1>
-  <div class="entries">
-    <app-contentbox class="entry" *ngFor="let entry of sundayEntries">
-      <div>
-        <span class="runNo">{{ entry.runNo }}.</span>&nbsp;<span
-        class="driver">{{ entry.driver.name }}</span>&nbsp;<span
-        class="time">{{ parseTime(entry.time) }}</span><br/>
-        <span>{{ entry.driver.club }}</span><br/>
-        <span>{{ entry.gauge }}" {{ entry.model }}</span><br/>
-      </div>
-      @if (entry.img !== null) {
-        <img class="entryPhoto" alt="Photo of {{entry.model}}"
-             src="{{url}}/assets/photos/{{entry.img}}">
-      }
-    </app-contentbox>
-  </div>
-</div>
-@if (hasReserves) {
-  <div class="day">
-    <h1>Reserves</h1>
-    <div class="entries">
-      <app-contentbox class="entry" *ngFor="let entry of reserveEntries">
+    @for (entry of fridayEntries; track entry.runNo) {
+      <app-contentbox class="entry">
         <div>
-          <span class="runNo">{{ entry.runNo }}.</span>&nbsp;<span class="driver">{{ entry.driver.name }}</span><br/>
+          <span class="runNo">{{ entry.runNo }}.</span>&nbsp;<span
+          class="driver">{{ entry.driver.name }}</span>&nbsp;<span
+          class="time">{{ parseTime(entry.time) }}</span><br/>
           <span>{{ entry.driver.club }}</span><br/>
           <span>{{ entry.gauge }}" {{ entry.model }}</span><br/>
         </div>
@@ -67,6 +15,66 @@
                src="{{url}}/assets/photos/{{entry.img}}">
         }
       </app-contentbox>
+    }
+  </div>
+</div>
+<div class="day">
+  <h1>Saturday</h1>
+  <div class="entries">
+    @for (entry of saturdayEntries; track entry.runNo) {
+      <app-contentbox class="entry">
+        <div>
+          <span class="runNo">{{ entry.runNo }}.</span>&nbsp;<span
+          class="driver">{{ entry.driver.name }}</span>&nbsp;<span
+          class="time">{{ parseTime(entry.time) }}</span><br/>
+          <span>{{ entry.driver.club }}</span><br/>
+          <span>{{ entry.gauge }}" {{ entry.model }}</span><br/>
+        </div>
+        @if (entry.img !== null) {
+          <img class="entryPhoto" alt="Photo of {{entry.model}}"
+               src="{{url}}/assets/photos/{{entry.img}}">
+        }
+      </app-contentbox>
+    }
+  </div>
+</div>
+<div class="day">
+  <h1>Sunday</h1>
+  <div class="entries">
+    @for (entry of sundayEntries; track entry.runNo) {
+      <app-contentbox class="entry">
+        <div>
+          <span class="runNo">{{ entry.runNo }}.</span>&nbsp;<span
+          class="driver">{{ entry.driver.name }}</span>&nbsp;<span
+          class="time">{{ parseTime(entry.time) }}</span><br/>
+          <span>{{ entry.driver.club }}</span><br/>
+          <span>{{ entry.gauge }}" {{ entry.model }}</span><br/>
+        </div>
+        @if (entry.img !== null) {
+          <img class="entryPhoto" alt="Photo of {{entry.model}}"
+               src="{{url}}/assets/photos/{{entry.img}}">
+        }
+      </app-contentbox>
+    }
+  </div>
+</div>
+@if (hasReserves) {
+  <div class="day">
+    <h1>Reserves</h1>
+    <div class="entries">
+      @for (entry of reserveEntries; track entry.runNo) {
+        <app-contentbox class="entry">
+          <div>
+            <span class="runNo">{{ entry.runNo }}.</span>&nbsp;<span class="driver">{{ entry.driver.name }}</span><br/>
+            <span>{{ entry.driver.club }}</span><br/>
+            <span>{{ entry.gauge }}" {{ entry.model }}</span><br/>
+          </div>
+          @if (entry.img !== null) {
+            <img class="entryPhoto" alt="Photo of {{entry.model}}"
+                 src="{{url}}/assets/photos/{{entry.img}}">
+          }
+        </app-contentbox>
+      }
     </div>
   </div>
 }
