--- a/api/public/clock/imlec.css
+++ b/api/public/clock/imlec.css
@@ -17,7 +17,7 @@ body, #wrapper, #clock {
 }
 
 #progress_bar {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     width: 0;
